<resources>
    <string name="app_name">WeCare</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="about_us">About Us</string>
    <string name="monitoring_system">Monitoring System</string>
    <string name="new_patient_profile">New Patient Profile</string>
    <string name="add_patient_profile">Create Patient Profile</string>
    <string name="title_activity_maps">title_activity_maps</string>
    <string name="aging_well">Aging Well</string>
    <string name="add_profile">Add Profile</string>
    <string name="belt_access_code">Belt Access Code</string>
    <string name="patient_s_name">Patient\'s Name</string>
</resources>
