<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_cnew"
            android:icon="@drawable/ic_profile"
            android:title="@string/add_patient_profile" />

        <item
            android:id="@+id/nav_tips"
            android:icon="@drawable/ic_sentiment_satisfied_black_24dp"
            android:title="@string/aging_well" />

        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_settings_phone_black_24dp"
            android:title="@string/about_us" />
    </group>
</menu>
