<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/background1"
tools:context=".CNewFragment">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/pn_layout"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:hint="@string/patient_s_name"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:startIconDrawable="@drawable/pnimg"
        app:startIconTint="@null">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/bac_layout"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/belt_access_code"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:endIconMode="password_toggle"
        app:helperText="9 digit key starting with XN3.."
        app:helperTextEnabled="true"
        app:startIconDrawable="@drawable/bacimg"
        app:startIconTint="@null">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="#000000" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_corner2"
        android:text="@string/add_profile"
        android:textColor="#FFFFFF" />

</LinearLayout>

</FrameLayout>

